fix(layout): add a spacer at top of footer, minor improvements on spacing

--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -264,6 +264,10 @@
   src: url("../fonts/Titillium_Web/titillium-web-v10-latin-ext_latin-600italic.eot");
   src: local(""), url("../fonts/Titillium_Web/titillium-web-v10-latin-ext_latin-600italic.eot?#iefix") format("embedded-opentype"), url("../fonts/Titillium_Web/titillium-web-v10-latin-ext_latin-600italic.woff2") format("woff2"), url("../fonts/Titillium_Web/titillium-web-v10-latin-ext_latin-600italic.woff") format("woff"), url("../fonts/Titillium_Web/titillium-web-v10-latin-ext_latin-600italic.ttf") format("truetype"), url("../fonts/Titillium_Web/titillium-web-v10-latin-ext_latin-600italic.svg#TitilliumWeb") format("svg");
 }
+.footer-spacer {
+  height: 32px;
+}
+
 footer {
   padding: 1rem 0;
   background-color: var(--bs-dark);
